// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectedNavigation mapDispatchToProps function fires 1`] = `
<Connect(Navigation)
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Navigation
    activeApp="someApp"
    activeGroup="someGroup"
    activeLocation="someLocation"
    appId="someId"
    navHidden={false}
    onClearActive={[Function]}
    onNavigate={[Function]}
    settings={
      Array [
        Object {
          "ansible": Object {
            "id": "ansible",
            "routes": Array [],
            "title": "Red Hat Ansible Automation Platform",
          },
          "docs": Object {
            "id": "docs",
            "routes": Array [],
            "title": "Documentation",
          },
          "insights": Object {
            "id": "insights",
            "routes": Array [],
            "title": "Red Hat Insights",
          },
          "openshift": Object {
            "id": "openshift",
            "routes": Array [],
            "title": "Red Hat Openshift Cluster Manager",
          },
          "staging": Object {
            "id": "staging",
            "routes": Array [],
            "title": "Staging Bundle",
          },
        },
      ]
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  >
    <Nav
      aria-label="Insights Global Navigation"
      data-ouia-safe="true"
      onSelect={[Function]}
      onToggle={[Function]}
      ouiaSafe={true}
      theme="dark"
    >
      <nav
        aria-label="Local"
        className="pf-c-nav"
        data-ouia-component-id={3}
        data-ouia-component-type="PF4/Nav"
        data-ouia-safe="true"
      >
        <NavList
          ariaLeftScroll="Scroll left"
          ariaRightScroll="Scroll right"
        >
          <ul
            className="pf-c-nav__list"
            onScroll={[Function]}
          >
            <NavigationItem
              isActive={false}
              key="0"
              onClick={[Function]}
              parent="someLocation"
            >
              <NavItem
                className=""
                isActive={false}
                onClick={[Function]}
                preventDefault={true}
                to="http://localhost/someLocation/undefined"
              >
                <li
                  className="pf-c-nav__item"
                >
                  <a
                    aria-current={null}
                    className="pf-c-nav__link"
                    href="http://localhost/someLocation/undefined"
                    onClick={[Function]}
                  />
                </li>
              </NavItem>
            </NavigationItem>
          </ul>
        </NavList>
      </nav>
    </Nav>
  </Navigation>
</Connect(Navigation)>
`;

exports[`ConnectedNavigation should render correctly with initial state 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Navigation)>
    <Navigation
      activeApp="someApp"
      activeGroup="someGroup"
      activeLocation="someLocation"
      appId="someId"
      navHidden={false}
      onClearActive={[Function]}
      onNavigate={[Function]}
      settings={
        Array [
          Object {
            "ansible": Object {
              "id": "ansible",
              "routes": Array [],
              "title": "Red Hat Ansible Automation Platform",
            },
            "docs": Object {
              "id": "docs",
              "routes": Array [],
              "title": "Documentation",
            },
            "insights": Object {
              "id": "insights",
              "routes": Array [],
              "title": "Red Hat Insights",
            },
            "openshift": Object {
              "id": "openshift",
              "routes": Array [],
              "title": "Red Hat Openshift Cluster Manager",
            },
            "staging": Object {
              "id": "staging",
              "routes": Array [],
              "title": "Staging Bundle",
            },
          },
        ]
      }
    >
      <Nav
        aria-label="Insights Global Navigation"
        data-ouia-safe="true"
        onSelect={[Function]}
        onToggle={[Function]}
        ouiaSafe={true}
        theme="dark"
      >
        <nav
          aria-label="Local"
          className="pf-c-nav"
          data-ouia-component-id={1}
          data-ouia-component-type="PF4/Nav"
          data-ouia-safe="true"
        >
          <NavList
            ariaLeftScroll="Scroll left"
            ariaRightScroll="Scroll right"
          >
            <ul
              className="pf-c-nav__list"
              onScroll={[Function]}
            >
              <NavigationItem
                isActive={false}
                key="0"
                onClick={[Function]}
                parent="someLocation"
              >
                <NavItem
                  className=""
                  isActive={false}
                  onClick={[Function]}
                  preventDefault={true}
                  to="http://localhost/someLocation/undefined"
                >
                  <li
                    className="pf-c-nav__item"
                  >
                    <a
                      aria-current={null}
                      className="pf-c-nav__link"
                      href="http://localhost/someLocation/undefined"
                      onClick={[Function]}
                    />
                  </li>
                </NavItem>
              </NavigationItem>
            </ul>
          </NavList>
        </nav>
      </Nav>
    </Navigation>
  </Connect(Navigation)>
</Provider>
`;

exports[`Navigation should render corectly 1`] = `
<Nav
  aria-label="Insights Global Navigation"
  data-ouia-safe="true"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <NavList
    ariaLeftScroll="Scroll left"
    ariaRightScroll="Scroll right"
  >
    <NavExpandable
      className="ins-m-navigation-align"
      groupId={null}
      id=""
      isActive={true}
      isExpanded={true}
      itemID="overview"
      key="0"
      ouia-nav-group="overview"
      srText=""
      title="Overview"
    >
      <NavigationItem
        isActive={false}
        itemID="someID"
        key="0"
        onClick={[Function]}
        ouia-nav-item="someID"
        parent="openshift/overview"
        title="Clusters"
      />
    </NavExpandable>
    <NavigationItem
      isActive={false}
      itemID="rules"
      key="1"
      onClick={[Function]}
      ouia-nav-item="rules"
      parent="openshift"
      title="Rules"
    />
    <NavigationItem
      isActive={false}
      itemID="topics"
      key="2"
      onClick={[Function]}
      ouia-nav-item="topics"
      parent="openshift"
      title="Topics"
    />
    <NavigationItem
      isActive={false}
      itemID="inventory"
      key="3"
      onClick={[Function]}
      ouia-nav-item="inventory"
      parent="openshift"
      title="Inventory"
    />
    <NavigationItem
      isActive={false}
      itemID="remediations"
      key="4"
      onClick={[Function]}
      ouia-nav-item="remediations"
      parent="openshift"
      title="Remediations"
    />
    <NavItem
      className="ins-c-navigation__additional-links"
      key="0"
      rel="noopener noreferrer"
      target="_blank"
    >
      Support Cases
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="1"
      rel="noopener noreferrer"
      target="_blank"
    >
      Cluster Manager Feedback
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="2"
      rel="noopener noreferrer"
      target="_blank"
    >
      Red Hat Marketplace
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="3"
      rel="noopener noreferrer"
      target="_blank"
      to="https://docs.openshift.com/dedicated/4/"
    >
      Documentation
       
      <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </NavItem>
  </NavList>
</Nav>
`;

exports[`Navigation should render correctly 2 1`] = `
<Nav
  aria-label="Insights Global Navigation"
  data-ouia-safe="true"
  onSelect={[Function]}
  onToggle={[Function]}
  ouiaSafe={true}
  theme="dark"
>
  <NavList
    ariaLeftScroll="Scroll left"
    ariaRightScroll="Scroll right"
  >
    <NavExpandable
      className="ins-m-navigation-align"
      groupId={null}
      id=""
      isActive={true}
      isExpanded={true}
      itemID="overview"
      key="0"
      ouia-nav-group="overview"
      srText=""
      title="Overview"
    >
      <NavigationItem
        isActive={false}
        itemID="someID"
        key="0"
        onClick={[Function]}
        ouia-nav-item="someID"
        parent="openshift/overview"
        title="Clusters"
      />
    </NavExpandable>
    <NavigationItem
      isActive={false}
      itemID="rules"
      key="1"
      onClick={[Function]}
      ouia-nav-item="rules"
      parent="openshift"
      title="Rules"
    />
    <NavigationItem
      isActive={false}
      itemID="topics"
      key="2"
      onClick={[Function]}
      ouia-nav-item="topics"
      parent="openshift"
      title="Topics"
    />
    <NavigationItem
      isActive={false}
      itemID="inventory"
      key="3"
      onClick={[Function]}
      ouia-nav-item="inventory"
      parent="openshift"
      title="Inventory"
    />
    <NavigationItem
      isActive={false}
      itemID="remediations"
      key="4"
      onClick={[Function]}
      ouia-nav-item="remediations"
      parent="openshift"
      title="Remediations"
    />
    <NavItem
      className="ins-c-navigation__additional-links"
      key="0"
      rel="noopener noreferrer"
      target="_blank"
    >
      Support Cases
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="1"
      rel="noopener noreferrer"
      target="_blank"
    >
      Cluster Manager Feedback
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="2"
      rel="noopener noreferrer"
      target="_blank"
    >
      Red Hat Marketplace
       
    </NavItem>
    <NavItem
      className="ins-c-navigation__additional-links"
      key="3"
      rel="noopener noreferrer"
      target="_blank"
      to="https://docs.openshift.com/dedicated/4/"
    >
      Documentation
       
      <ExternalLinkAltIcon
        color="currentColor"
        noVerticalAlign={false}
        size="sm"
      />
    </NavItem>
  </NavList>
</Nav>
`;
